@@ -250,7 +250,7 @@ public class TestPartieDames {
         suiteDesDeplacementsVoulus = new int[] {31, 42, 33, 22, 13, 2};
 
         indexDeplacement = 0;
-        for (Prise d : listeMeilleursDeplacements.getFirst()) {
+        for (Prise d : listeMeilleursDeplacements.get(0)) {
             assertEquals(d.getPositionPrise(), suiteDesPrisesVoulus[indexDeplacement]);
             assertEquals(d.getPosition(), suiteDesDeplacementsVoulus[indexDeplacement]);
             indexDeplacement++;
